[FIX] mod download updates
+ Some fixes to allow use mods in server